--- a/daldal_teamProject/.settings/org.eclipse.wst.common.component
+++ b/daldal_teamProject/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="daldal">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/resources"/>
         <property name="context-root" value="daldal"/>
         <property name="java-output-path" value="/daldal/build/classes"/>
     </wb-module>
